      . Several info attributes previously stored in the root object are
        now topology attributes (e.g. information about hwloc, about the
        discovery, operating system information returned by uname).
        See "Custom string infos" in the documentation for details.
    - hwloc_cpukinds_get_info() and hwloc_cpukinds_register() now manipulate
      infos as such a structure.
  + Distances structure "MEANS" kinds are renamed to "VALUE".
* Tools
  + lstopo has a new --osf option to tune the displaying of object
    attributes and units.
  + hwloc-info --objects, --topology and --support are deprecated in
    favor of passing levels, topology and support as targets.
* Removed features
  + Netloc.
  + Importing and exporting from/to hwloc 1.x XML.
  + BlueGene/Q support.
  + Functions that were deprecated since 2.0:
    - memory-binding functions with the "_nodeset" suffix,
      e.g. hwloc_get_proc_membind_nodeset()
    - hwloc_topology_insert_misc_object_by_parent()
    - hwloc_obj_cpuset_snprintf()
    - hwloc_obj_type_sscanf()
    - hwloc_cpuset_to_nodeset_strict()
    - hwloc_cpuset_from_nodeset_strict()
  + HWLOC_PCI_<domain>_<bus>_LOCALCPUS environment variables,
    superseded with a single HWLOC_PCI_LOCALITY since 2.0.
* Misc
  + hwloc_topology_allow() is now possible on shmem-adopted topology.
    This allows to share a topology between processes in different
    Linux cgroups, etc.
  + Size info attribute values that were in KiB are now explicitly
    suffixed by "KiB".
  + XML format switches to 3.0 by default. Exporting to 2.x is
    possible with the new V2 XML export flag.


Version 2.10.0
--------------
* Heterogeneous Memory core improvements
  + Better heuristics to identify the subtype of memory such as HBM,
    DRAM, NVM, CXL-DRAM, etc.
  + Build memory tiers, i.e. sets of NUMA nodes with the same subtype
    and similar performance.
    - NUMA node tier ranks are exposed in the new MemoryTier info