@@ -474,6 +474,7 @@ extern "C" {
 #define HWLOC_DISTANCES_KIND_FROM_USER HWLOC_NAME_CAPS(DISTANCES_KIND_FROM_USER)
 #define HWLOC_DISTANCES_KIND_VALUE_LATENCY HWLOC_NAME_CAPS(DISTANCES_KIND_VALUE_LATENCY)
 #define HWLOC_DISTANCES_KIND_VALUE_BANDWIDTH HWLOC_NAME_CAPS(DISTANCES_KIND_VALUE_BANDWIDTH)
+#define HWLOC_DISTANCES_KIND_VALUE_HOPS HWLOC_NAME_CAPS(DISTANCES_KIND_VALUE_HOPS)
 #define HWLOC_DISTANCES_KIND_HETEROGENEOUS_TYPES HWLOC_NAME_CAPS(DISTANCES_KIND_HETEROGENEOUS_TYPES)
 
 #define hwloc_distances_get HWLOC_NAME(distances_get)
